# BLS-PoC

contract/: Cargo.toml
contract/bls-sig/: Cargo.toml
contract/bls-sig/src/: lib.rs
contract/src/: helpers.rs  lib.rs
near-client/: Cargo.toml
near-client/src/: main.rs
