[package]
name = "seda-sigs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.1.0-pre.3"
zeropool-bn = {  version = "0.5.11", features = [] }
rand = "0.8.5"
bls-signatures-rs = {path = "./bls-signatures-rs"}
hex = {version = "0.4.3", features = ["serde"]}
near-sys = "0.2.0"
getrandom = {version = "0.2.8", features = ["js"]}
