[package]
name = "near"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-jsonrpc-client = "0.4.0"
near-primitives = "0.15.0"
near-jsonrpc-primitives = "0.15.0"
serde_json = "1.0.85"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
near-crypto = "0.15.0"
bls-signatures = { version = "0.13.0", default-features = false, features= ['pairing']}
rand_chacha = {version = "0.3.1"}