[package]
name = "near"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-jsonrpc-client = "0.4.0"
near-primitives = "0.15.0"
near-jsonrpc-primitives = "0.15.0"
serde_json = "1.0.85"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
near-crypto = "0.15.0"


bls-sig = {path = "../contract/bls-sig"}
rand = "0.8.5"
zeropool-bn = {  version = "0.5.11", features = [] }
